--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
 	"version": "0.0.1",
 	"private": true,
 	"dependencies": {
-		"express": "3.4.4",
-		"jade": "0.35.0"
+		"express":	"3.4.4",
+		"jade":		"0.35.0",
+		"request":	"2.27.0",
+		"string":	"1.7.0",
+		"mysql":	"2.0.0-alpha9",
+		"keyword-extractor": "0.0.7",
+		"async": "0.2.9"
 	}
 }
